tests/expected_invalid_public_grants_private_permit.diag.out
<input>:4:33: error: public API cannot reference private type 'Access'
    public fn open() -> Unit grants Access {}
                                    ^^^^^^
